[package]
name = "elastic_query"
version = "0.4.1"
authors = ["Xargin <cao1988228@163.com>"]
edition = "2018"
license = "MIT"
description = "convert bool expression to elasticsearch DSL"
repository = "https://github.com/cch123/elastic-rs"
documentation = "https://docs.rs/elastic_query/0.2.0/elastic_query"
readme = "readme.md"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde_json = "1.0.37"

